crates/general/fixtures/invalid/duplicate_names.zt
-- Expected: parse-error (≥1 diagnostic + lossless round-trip)
-- Spec: validation — duplicate top-level binding names and duplicate record field names.
-- Caught by the validation pass (which runs as part of `parse()`):
-- duplicate top-level `x := …` and duplicate fields in inline and nested value records.

x := 1
x := 2

{ a = 1; a = 2; }

outer := { inner = 1; inner = 2; }

y := { p = { q = 1; q = 2; }; }

x
